tests/baselines/reference/awaitUsingDeclarationsInForOf.2.errors.txt
awaitUsingDeclarationsInForOf.2.ts(2,10): error TS2487: The left-hand side of a 'for...of' statement must be a variable or a property access.
awaitUsingDeclarationsInForOf.2.ts(2,16): error TS2304: Cannot find name 'using'.
awaitUsingDeclarationsInForOf.2.ts(2,25): error TS2304: Cannot find name 'of'.
awaitUsingDeclarationsInForOf.2.ts(2,29): error TS1011: An element access expression should take an argument.


==== awaitUsingDeclarationsInForOf.2.ts (4 errors) ====
    async function main() {
        for (await using of of []) {
             ~~~~~~~~~~~
!!! error TS2487: The left-hand side of a 'for...of' statement must be a variable or a property access.
                   ~~~~~
!!! error TS2304: Cannot find name 'using'.
                            ~~
!!! error TS2304: Cannot find name 'of'.
                                
!!! error TS1011: An element access expression should take an argument.
        }
    }
    